--- a/app/views/noticias/noticias.ejs
+++ b/app/views/noticias/noticias.ejs
@@ -8,5 +8,19 @@
 
 		<h1>Notícias</h1>
 
+		<table>
+			<tr>
+				<td>Id</td>
+				<td>Titulo</td>
+				<td>Noticia</td>
+			</tr>
+		<% for(var i = 0; i < noticias.length; i++) { %>
+			<tr>
+				<td><%= noticias[i].id %></td>
+				<td><%= noticias[i].titulo %></td>
+				<td><%= noticias[i].noticia %></td>
+			</tr>
+		<% } %>
+		</table>
 	</body>
 </html>
