--- a/app/views/noticias/noticia.ejs
+++ b/app/views/noticias/noticia.ejs
@@ -2,11 +2,24 @@
 	<html lang="pt-br">
 		<head>
 			<meta charset="utf-8"/>
-			<title>Portal de notícias</title>
+			<title>Notícia</title>
 		</head>
 	<body>
 
 		<h1>Notícia</h1>
 
+		<table>
+			<tr>
+				<td>Id</td>
+				<td>Titulo</td>
+				<td>Noticia</td>
+			</tr>
+			<tr>
+				<td><%= noticia.id %></td>
+				<td><%= noticia.titulo %></td>
+				<td><%= noticia.noticia %></td>
+			</tr>
+		<% } %>
+		</table>
 	</body>
 </html>
