Implementando designer pattern MVC no projeto

--- a/app/views/noticias/noticia.ejs
+++ b/app/views/noticias/noticia.ejs
@@ -15,11 +15,10 @@
 				<td>Noticia</td>
 			</tr>
 			<tr>
-				<td><%= noticia.id %></td>
-				<td><%= noticia.titulo %></td>
-				<td><%= noticia.noticia %></td>
+				<td><%= noticia[0].id %></td>
+				<td><%= noticia[0].titulo %></td>
+				<td><%= noticia[0].noticia %></td>
 			</tr>
-		<% } %>
 		</table>
 	</body>
 </html>
